 15-Dec-2019  V0.942 Suppress SIFTS with primary data loading
 16-Dec-2019  V0.943 Extend normalizeCsvToList() to handle more inconsisent cases.
 16-Dec-2019  V0.944 Add workflow module and tests to facilitate Luigi integration.
 23-Dec-2019  V0.945 Add consolidated EC processing and disable auto search context filters
 04-Jan-2020  V0.946 Add support for rcsb_polymer_entity.rcsb_enzyme_class_combined_depth, set single process cache management on loading
 08-Jan-2020  V0.947 Add checks for missing entity gene names
 10-Jan-2020  V0.949 Update dependencides for rcsb.utils.struct
 20-Jan-2020  V0.950 pre-beta-rev-v1 - reorganizing assembly and feature categories, standardize on provenance_source, update enums
 25-Jan-2020  V0.951 nested schema extension adjustments
 27-Jan-2020  V0.952 configuration update updating ExDb collection names
 28-Jan-2020  V0.953 update configuration documentation and cleanup unused files
 29-Jan-2020  V0.954 finalize feature schema
 30-Jan-2020  V0.955 update dependencies
 30-Jan-2020  V0.956 Change PDBx MOCK repository organization from SANDBOX to FTP repository layout, handle missing data for
                     chromophores, and update configuration example file.
 30-Jan-2020  V0.957 Update dependency version for rcsb.utils.config
  2-Feb-2020  V0.958 Corrections keyword arguments in RepoLoadWorkflow()
  3-Feb-2020  V0.959 Split configuration file into site and schema portions
  5-Feb-2020  V0.960 Fix some inconsistencies among repository holdings collections and add consistency checks for
                     entity instance validation features
  6-Feb-2020  V0.961 Add additional chimeric and multi-reference test cases and suppress mongodb tracebacks on replace failures
  9-Feb-2020  V0.962 Cleanup combined software program list, separate tests to detect schema differences, add support for
                     schema updates to existing collections, update schema update CLI with compare methods.